--- a/.dockerignore
+++ b/.dockerignore
@@ -14,6 +14,9 @@ yarn-error.log*
 .gitignore
 .gitattributes
 
+# GitHub Actions (not needed in container)
+.github/
+
 # IDE
 .vscode/
 .idea/
@@ -29,7 +32,6 @@ Thumbs.db
 # Documentation (not needed in container)
 docs/
 *.md
-!README.md
 
 # Database data (managed by volume)
 prisma/*.db
@@ -42,7 +44,6 @@ docker-compose*.yml
 
 # Uploaded images (managed by volume)
 public/uploads/*
-!public/uploads/.gitkeep
 
 # Logs
 logs/
@@ -65,6 +66,5 @@ temp/
 dist/
 *.tsbuildinfo
 
-# Source maps (optional, can be included for debugging)
+# Source maps
 *.map
-
