--- a/env.example
+++ b/env.example
@@ -1,8 +1,16 @@
-# 애플리케이션 포트
+# ==================================================
+# Digital Canvas 환경 설정
+# ==================================================
+
+# ----------------------------------------------------
+# 로컬 개발 환경용 설정
+# ----------------------------------------------------
+
+# 애플리케이션 내부 포트 (로컬 개발)
 PORT=20010
 
 # Node 환경
-NODE_ENV=production
+NODE_ENV=development
 
 # Prisma (SQLite)
 DATABASE_URL="file:./prisma/database.db"
@@ -11,5 +19,20 @@ DATABASE_URL="file:./prisma/database.db"
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin123
 
-# 세션 시크릿 (프로덕션에서는 반드시 변경하세요)
+# 세션 시크릿
 SESSION_SECRET=digital-canvas-secret-key-change-in-production
+
+# ----------------------------------------------------
+# Portainer (프로덕션) 환경용 설정
+# docker-compose.yml 사용 시
+# ----------------------------------------------------
+
+# 호스트 포트 (외부 노출 포트)
+# HOST_PORT=3000
+
+# 관리자 계정 (Portainer 환경변수에서 설정)
+# ADMIN_USERNAME=your_admin_username
+# ADMIN_PASSWORD=your_secure_password
+
+# 세션 시크릿 (Portainer 환경변수에서 설정)
+# SESSION_SECRET=your_random_secret_key
